# OpenvinoTest

./: CMakeLists.txt  main.cpp
